<resources>
    <string name="app_name">NOHA</string>
    <string name="inicio">Inicio</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noData">No hay actividades</string>
    <string name="camera">Camara</string>
    <string name="item">Item</string>
    <string name="precio">Precio</string>
    <string name="item_count">0</string>
    <string name="less">-</string>
    <string name="plus">+</string>
    <string name="compra">$0</string>
    <string name="pagar">Pagar</string>
    <string name="total">Total:</string>
    <string name="title_activity_menu">Menu</string>
    <string name="habitacion">Habitación</string>
</resources>